# my-own-whiteboard

./: .env  .gitignore  Dockerfile  README.md  app.py  cache_manager.py  docker-compose.yml  extensions.py  main.py  models.py  pyproject.toml  requirements.txt
kubernetes/: kind-config.yaml  wb-white.yaml  whiteboard-deployment.yaml  whiteboard-hpa.yml
static/css/: styles.css
static/js/: socket.js  whiteboard.js
templates/: index.html  room.html
