[project]
name = "collaborative-whiteboard"
version = "0.1.0"
description = "Real-time collaborative whiteboard application"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-caching>=2.3.0",
    "flask-socketio>=5.4.1",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "redis",
    "flask-redis",
]
